centrage du site, modif css

--- a/index.html
+++ b/index.html
@@ -12,33 +12,57 @@
 
 									<div class="col-lg-10">
 																<title>Association des étudiants de la MIAGE de Lille </title>
-																<h1>Association des étudiants de la MIAGE de Lille</h1>
+																<h1>Asso MIAGE de Lille</h1>
 									</div>
 							</header>
-							<nav>
-									<ul>
-											<li><a href="index.html">Accueil </a></li>
-											<li><a href="laformation.html"> La formation MIAGE </a></li>
-											<li><a href="lesevents.html"> Nos évènements </a></li>
-									   	<li><a href="lebureau.html"> Le Bureau 2018-2019 </a></li>
-									   	<li><a href="lesgoodies.html"> Nos goodies </a></li>
-											<li><a href="contact.html"> Nous contacter </a></li>
-									</ul>
-								</nav>
 					</div>
 		</head>
 
 		<body>
 
 						<div class="container">
-						 <header class="row">
-							 	<div class="col-md-12">
+
 								 		<h2>A propos de nous </h2>
-										<p>Bonjour !
-												Voici le site de l'Asso MIAGE Lille. Vous pouvez vous renseigner sur nos derniers évènements, notre formation ou simplement nous contacter.</p>
-								</div>
+										<p>L'Asso MIAGE Lille est l'association des étudiants de la formation Méthodes Appliquées à la Gestion des Entreprises, à l'Université de  de Lille.
+											 Vous pouvez vous renseigner sur nos derniers évènements, notre formation ou simplement nous contacter.</p>
+
 						</header>
 						</div>
 
+						<section>
+							<h2> NEWS </h2>
+
+						</section>
+
+						<section>
+							<h2> LA FORMATION </h2>
+
+						</section>
+
+						<section>
+							<h2> LE BUREAU </h2>
+
+						</section>
+
+						<section>
+							<h2> NOS GOODIES </h2>
+
+						</section>
+
+						<section>
+									<h2> NOUS CONTACTER </h2>
+
+										<legend>Nous contacter à assomiagelille@gmail.com</legend>
+
+											<div class="form-group">
+												<label for="texte">Votre nom : </label>
+												<input id="text" type="text" class="form-control">
+											</div>
+											<div class="form-group">
+												<label for="textarea">Votre message : </label>
+												<textarea id="textarea" type="textarea" class="form-control"></textarea>
+											</div>
+												<button>Envoyer</button>
+						</section>
 		</body>
 </html>
