starting the page structure

--- a/index.html
+++ b/index.html
@@ -11,67 +11,32 @@
 			<!-- Latest compiled and minified JavaScript -->
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+		<link href="css/style.css" rel="stylesheet" media="all" type="text/css">
+	</head>
 
-				<link href="css/style.css" rel="stylesheet" media="all" type="text/css">
-				<div class="container">
-						 <header class="row">
-									<div class="col-lg-2">
-											<img src = "images/asso.png" alt ="logoasso" width=100 >
-									</div>
+	<body>
 
-									<div class="col-lg-10">
-																<title>Association des étudiants de la MIAGE de Lille </title>
-																<h1>Asso MIAGE de Lille</h1>
-									</div>
-							</header>
-					</div>
-		</head>
+		<div class="jumbotron" id="index">
+      <div class="container">
+        <img src="images/banniere.png" alt="asso MIAGE" class="img-responsive"/>
+      </div>
+    </div>
 
-		<body>
+		<hr class="redLine" />
+		<section id="intro" class="ligne">
+			<p>
+				L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
+			</p>
+		</section>
 
-						<div class="container">
 
-								 		<h2>A propos de nous </h2>
-										<p>L'Asso MIAGE Lille est l'association des étudiants de la formation Méthodes Appliquées à la Gestion des Entreprises, à l'Université de  de Lille.
-											 Vous pouvez vous renseigner sur nos derniers évènements, notre formation ou simplement nous contacter.</p>
+		<hr class="redLine" />
+		<section class="ligne" id="news">
+			<div class="container">
+					<h2><i class="fas fa-news" aria-hidden="true"></i>News</h2>
+			</div>
+		</section>
 
-						</header>
-						</div>
 
-						<section>
-							<h2> NEWS </h2>
-
-						</section>
-
-						<section>
-							<h2> LA FORMATION </h2>
-
-						</section>
-
-						<section>
-							<h2> LE BUREAU </h2>
-
-						</section>
-
-						<section>
-							<h2> NOS GOODIES </h2>
-
-						</section>
-
-						<section>
-									<h2> NOUS CONTACTER </h2>
-
-										<legend>Nous contacter à assomiagelille@gmail.com</legend>
-
-											<div class="form-group">
-												<label for="texte">Votre nom : </label>
-												<input id="text" type="text" class="form-control">
-											</div>
-											<div class="form-group">
-												<label for="textarea">Votre message : </label>
-												<textarea id="textarea" type="textarea" class="form-control"></textarea>
-											</div>
-												<button>Envoyer</button>
-						</section>
-		</body>
+	</body>
 </html>
