first appearance fixes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
 		<hr class="redLine" />
 		<section id="intro" class="ligne">
-			<p>
-				L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
-			</p>
+			<div class="container">
+				<p>
+					L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
+				</p>
+			</div>
 		</section>
 
 
