first draft of the index page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 			<!-- Latest compiled and minified JavaScript -->
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+		<!-- IMPORT FontAwesome -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+		<!-- IMPORT Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 		<link href="css/style.css" rel="stylesheet" media="all" type="text/css">
 	</head>
 
@@ -18,24 +25,47 @@
 
 		<div class="jumbotron" id="index">
       <div class="container">
-        <img src="images/banniere.png" alt="asso MIAGE" class="img-responsive"/>
+        <img src="images/banniere.png" alt="asso MIAGE de Lille" class="img-responsive"/>
       </div>
     </div>
 
-		<hr class="redLine" />
-		<section id="intro" class="ligne">
+		<section class="ligne" id="intro" >
 			<div class="container">
-				<p>
-					L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
-				</p>
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<p>
+							L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
+						</p>
+					</div>
+				</div>
 			</div>
 		</section>
 
 
-		<hr class="redLine" />
 		<section class="ligne" id="news">
 			<div class="container">
-					<h2><i class="fas fa-news" aria-hidden="true"></i>News</h2>
+					<h2>News</h2>
+			</div>
+		</section>
+
+
+		<section class="ligne" id="formation">
+			<div class="container">
+					<h2>La formation</h2>
+			</div>
+		</section>
+
+
+		<section class="ligne" id="bureau">
+			<div class="container">
+					<h2>Le bureau</h2>
+			</div>
+		</section>
+
+
+		<section class="ligne" id="contact">
+			<div class="container">
+					<h2>Nous contacter</h2>
 			</div>
 		</section>
 
