changed global look of the site ; installed Less

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 		<!-- IMPORT FontAwesome -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+		<!-- IMPORT Less -->
+			<link rel="stylesheet/less" type="text/css" href="css/styles.less" />
+			<script src="js/less.min.js" ></script>
+
 
 		<!-- IMPORT Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -25,9 +30,15 @@
 
 		<div class="jumbotron" id="index">
       <div class="container">
-        <img src="images/banniere.png" alt="asso MIAGE de Lille" class="img-responsive"/>
+        <img src="images/banniere3.png" alt="asso MIAGE Lille" class="img-responsive"/>
       </div>
     </div>
+
+		<section class="ligne" id="construction">
+			<div class="container">
+					<h2><i class="fas fa-exclamation-triangle"></i> Site en construction</h2>
+			</div>
+		</section>
 
 		<section class="ligne" id="intro" >
 			<div class="container">
@@ -51,21 +62,43 @@
 
 		<section class="ligne" id="formation">
 			<div class="container">
-					<h2>La formation</h2>
+					<h2>Formation</h2>
 			</div>
 		</section>
 
 
 		<section class="ligne" id="bureau">
 			<div class="container">
-					<h2>Le bureau</h2>
+					<h2>Bureau</h2>
 			</div>
 		</section>
 
 
 		<section class="ligne" id="contact">
+				<div class="container">
+					<div class="formulaire">
+						<h2>Contact</h2>
+					</div>
+					<div class="reseaux">
+						<div class="facebook">
+							<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="AssoMIAGELille"><i class="fab fa-facebook-f"></i></a>
+						</div>
+						<div class="linkedin">
+							<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
+						</div>
+						<div class="twitter">
+							<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
+						</div>
+						<div class="snapchat">
+							<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
+						</div>
+					</div>
+				</div>
+		</section>
+
+		<section class="ligne" id="footer">
 			<div class="container">
-					<h2>Nous contacter</h2>
+					<h2>crédits etc</h2>
 			</div>
 		</section>
 
