deleted useless bootstrap ; finished contact ; drafted footer ; started news

--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-
-		<!-- IMPORT BOOTSTRAP -->
-			<!-- Latest compiled and minified CSS -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-			<!-- Optional theme -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-			<!-- Latest compiled and minified JavaScript -->
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 		<!-- IMPORT FontAwesome -->
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
@@ -18,19 +9,21 @@
 			<link rel="stylesheet/less" type="text/css" href="css/styles.less" />
 			<script src="js/less.min.js" ></script>
 
-
-		<!-- IMPORT Fonts -->
+		<!-- IMPORT polices -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
-		<link href="css/style.css" rel="stylesheet" media="all" type="text/css">
+		<title>Asso MIAGE Lille</title>
+		<link rel="icon" href="images/favicon.ico">
+		<meta name="format-detection" content="telephone=no"> <!-- désactive la reconnaissance des numéros de tel sous safari -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	</head>
 
 	<body>
 
-		<div class="jumbotron" id="index">
+		<div class="ligne" id="index">
       <div class="container">
-        <img src="images/banniere3.png" alt="asso MIAGE Lille" class="img-responsive"/>
+        <img src="images/banniere3.png" alt="asso MIAGE Lille"/>
       </div>
     </div>
 
@@ -45,7 +38,8 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<p>
-							L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille. Elle a pour vocation de faciliter la communication entre les étudiants et l'organisation d'évènements.
+							L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille.<br />
+							Elle a vocation à faciliter la communication entre les étudiants, organiser des évènements et assurer la reconnaissance professionnelle de la formation.
 						</p>
 					</div>
 				</div>
@@ -56,6 +50,32 @@
 		<section class="ligne" id="news">
 			<div class="container">
 					<h2>News</h2>
+
+					<div class="newsFeed">
+
+						<div class="newsItem">
+							<div class="type">EVENT</div>
+							<div class="illus"> <img src="images/event1.jpg"  alt="event img" /></div>
+							<div class="title">Soirée MIAGE x AEI</div>
+							<div class="place"></div>
+							<div class="date"></div>
+							<div class="message"></div>
+							<div class="fblink"></div>
+						</div>
+
+
+
+
+
+
+
+
+					</div>
+
+
+
+
+
 			</div>
 		</section>
 
@@ -76,29 +96,44 @@
 
 		<section class="ligne" id="contact">
 				<div class="container">
-					<div class="formulaire">
-						<h2>Contact</h2>
+					<div class="contactezNous">
+						Contactez-nous
 					</div>
-					<div class="reseaux">
-						<div class="facebook">
-							<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="AssoMIAGELille"><i class="fab fa-facebook-f"></i></a>
-						</div>
-						<div class="linkedin">
-							<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
-						</div>
-						<div class="twitter">
-							<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
-						</div>
-						<div class="snapchat">
-							<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
-						</div>
+					<div class="facebook">
+						<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="AssoMIAGELille"><i class="fab fa-facebook-f"></i></a>
+					</div>
+					<div class="linkedin">
+						<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
+					</div>
+					<div class="mail">
+						<a href="mailto:assomiagelille@gmail.com" title="AssoMIAGELille"><i class="fa fa-envelope"></i></a>
+					</div>
+					<div class="snapchat">
+						<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
+					</div>
+					<div class="twitter">
+						<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
 					</div>
 				</div>
 		</section>
 
 		<section class="ligne" id="footer">
 			<div class="container">
-					<h2>crédits etc</h2>
+				<div class="col">
+					<span class="category"><i class="fa fa-map-marker-alt"></i>&nbsp;Localisation</span>
+					<p>
+						Bâtiment M3 - Cité Scientifique<br />
+						59650 Villeneuve-d'Ascq<br />
+						France
+					</p>
+				</div>
+				<div class="col">
+					<span class="category"><i class="fa fa-coffee"></i>&nbsp;Partenaires</span>
+					<p>
+						AEI Lille<br />
+						Fédération MIAGE Connection
+					</p>
+				</div>
 			</div>
 		</section>
 
