--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<section class="ligne" id="construction">
 			<div class="container">
-					<h2><i class="fas fa-exclamation-triangle"></i> Site en construction</h2>
+					<h2><i class="fas fa-exclamation-triangle"></i>&nbsp;Site en construction</h2>
 			</div>
 		</section>
 
@@ -49,33 +49,44 @@
 
 		<section class="ligne" id="news">
 			<div class="container">
-					<h2>News</h2>
+					<h2>Actualités</h2>
 
 					<div class="newsFeed">
 
 						<div class="newsItem">
-							<div class="type">EVENT</div>
-							<div class="illus"> <img src="images/event1.jpg"  alt="event img" /></div>
+							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
 							<div class="title">Soirée MIAGE x AEI</div>
-							<div class="place"></div>
-							<div class="date"></div>
-							<div class="message"></div>
-							<div class="fblink"></div>
+							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
+							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
+							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
+							<div class="fblink">Plus d'infos sur&nbsp;<a href=
+								"http://facebook.com"
+								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
 						</div>
 
+						<div class="newsItem">
+							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
+							<div class="title">Soirée MIAGE x AEI</div>
+							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
+							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
+							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
+							<div class="fblink">Plus d'infos sur&nbsp;<a href=
+								"http://facebook.com"
+								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+						</div>
 
-
-
-
-
-
+						<div class="newsItem">
+							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
+							<div class="title">Soirée MIAGE x AEI</div>
+							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
+							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
+							<div class="message">Soirée de désintégration en collaboration avec l'AEI</div>
+							<div class="fblink">Plus d'infos sur&nbsp;<a href=
+								"http://facebook.com"
+								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+						</div>
 
 					</div>
-
-
-
-
-
 			</div>
 		</section>
 
@@ -120,19 +131,22 @@
 		<section class="ligne" id="footer">
 			<div class="container">
 				<div class="col">
-					<span class="category"><i class="fa fa-map-marker-alt"></i>&nbsp;Localisation</span>
-					<p>
+					<i class="fa fa-map-marker-alt"></i>
+
+					<div>
+						<span class="category">Locaux</span><br />
 						Bâtiment M3 - Cité Scientifique<br />
 						59650 Villeneuve-d'Ascq<br />
-						France
-					</p>
+					</div>
 				</div>
 				<div class="col">
-					<span class="category"><i class="fa fa-coffee"></i>&nbsp;Partenaires</span>
-					<p>
+					<i class="fa fa-coffee"></i>
+					<div>
+						<span class="category">Partenaires</span><br />
 						AEI Lille<br />
-						Fédération MIAGE Connection
-					</p>
+						MIAGE Connection<br />
+						FAEL
+					</div>
 				</div>
 			</div>
 		</section>
