added discord contact

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 					<div class="twitter">
 						<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
 					</div>
+					<div class="discord">
+						<a href="https://discord.gg/" target="_blank" title="AssoMIAGELille"><i class="fab fa-discord"></i></a>
+					</div>
 				</div>
 		</section>
 
