--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
 		<section class="ligne" id="bureau">
 			<div class="container">
-					<h2>Bureau</h2>
+					<h2>Bureau 2019</h2>
+		      <img src="images/trombi.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
 			</div>
 		</section>
 
@@ -111,13 +112,13 @@
 						Contactez-nous
 					</div>
 					<div class="facebook">
-						<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="AssoMIAGELille"><i class="fab fa-facebook-f"></i></a>
+						<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
 					</div>
 					<div class="linkedin">
 						<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
 					</div>
 					<div class="mail">
-						<a href="mailto:assomiagelille@gmail.com" title="AssoMIAGELille"><i class="fa fa-envelope"></i></a>
+						<a href="mailto:assomiagelille@gmail.com" title="Asso MIAGE Lille"><i class="fa fa-envelope"></i></a>
 					</div>
 					<div class="snapchat">
 						<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
@@ -126,7 +127,7 @@
 						<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
 					</div>
 					<div class="discord">
-						<a href="https://discord.gg/" target="_blank" title="AssoMIAGELille"><i class="fab fa-discord"></i></a>
+						<a href="https://discord.gg/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-discord"></i></a>
 					</div>
 				</div>
 		</section>
