changed trombi bg and global colors in consequence

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<section class="ligne" id="bureau">
 			<div class="container">
 					<h2>Bureau 2019</h2>
-		      <img src="images/trombi.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
+		      <img src="images/trombi_bg.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
 			</div>
 		</section>
 
