--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 		<link rel="icon" href="images/favicon.ico">
 		<meta name="format-detection" content="telephone=no"> <!-- désactive la reconnaissance des numéros de tel sous safari -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+		<script src="js/main.js"></script>
 	</head>
 
 	<body>
 
 		<div class="ligne" id="index">
       <div class="container">
-        <img src="images/banniere3.png" alt="asso MIAGE Lille"/>
+        <img src="images/banniere3.png" title="asso MIAGE Lille" alt="asso MIAGE Lille"/>
       </div>
     </div>
 
@@ -40,6 +41,7 @@
 						<p>
 							L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille.<br />
 							Elle a vocation à faciliter la communication entre les étudiants, organiser des évènements et assurer la reconnaissance professionnelle de la formation.
+							<br /><i class="fas fa-exclamation-triangle"></i>&nbsp;texte à valider
 						</p>
 					</div>
 				</div>
@@ -60,7 +62,7 @@
 							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
 							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
 							<div class="fblink">Plus d'infos sur&nbsp;<a href=
-								"http://facebook.com"
+								"https://facebook.com"
 								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
 						</div>
 
@@ -71,7 +73,7 @@
 							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
 							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
 							<div class="fblink">Plus d'infos sur&nbsp;<a href=
-								"http://facebook.com"
+								"https://facebook.com"
 								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
 						</div>
 
@@ -81,8 +83,8 @@
 							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
 							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
 							<div class="message">Soirée de désintégration en collaboration avec l'AEI</div>
-							<div class="fblink">Plus d'infos sur&nbsp;<a href=
-								"http://facebook.com"
+							<div class="fblink"><span>Plus d'infos sur</span><a href=
+								"https://facebook.com"
 								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
 						</div>
 
@@ -90,6 +92,29 @@
 			</div>
 		</section>
 
+
+		<section class="ligne" id="photos">
+			<div class="container">
+					<h2>Dernières photos</h2>
+					<div id="picturesBoard">
+						<figure>
+							<img src="images/campusenfete.jpg" title="Campus en fête 2018" alt="Campus en fête 2018">
+						</figure>
+						<figure class="halfsize">
+							<img src="images/JSE.jpg" title="JSE 2018" alt="JSE 2018" >
+						</figure>
+						<figure>
+							<img src="images/receptiondessciences2018.jpg" title="RdS 2018" alt="RdS 2018" >
+						</figure>
+						<figure class="halfsize">
+							<img src="images/elections.jpg" title="Élections 2018" alt="Élections 2018" >
+						</figure>
+						<figure class="halfsize">
+							<img src="images/lasergame.jpg" title="LaserGame" alt="LaserGame" >
+						</figure>
+					</div>
+			</div>
+		</section>
 
 		<section class="ligne" id="formation">
 			<div class="container">
@@ -112,7 +137,7 @@
 						Contactez-nous
 					</div>
 					<div class="facebook">
-						<a href="https://www.facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
+						<a href="https://facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
 					</div>
 					<div class="linkedin">
 						<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
@@ -121,6 +146,7 @@
 						<a href="mailto:assomiagelille@gmail.com" title="Asso MIAGE Lille"><i class="fa fa-envelope"></i></a>
 					</div>
 					<div class="snapchat">
+						<img src="images/snapcode.png" alt="Snapcode asso MIAGE" title="Snapcode asso MIAGE"/>
 						<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
 					</div>
 					<div class="twitter">
@@ -135,8 +161,15 @@
 		<section class="ligne" id="footer">
 			<div class="container">
 				<div class="col">
+					<i class="fa fa-info"></i>
+					<div>
+						<span class="category">Asso MIAGE</span><br />
+						association Loi 1901<br />
+						depuis 1977<br />
+					</div>
+				</div>
+				<div class="col">
 					<i class="fa fa-map-marker-alt"></i>
-
 					<div>
 						<span class="category">Locaux</span><br />
 						Bâtiment M3 - Cité Scientifique<br />
@@ -152,9 +185,23 @@
 						FAEL
 					</div>
 				</div>
+				<div class="col">
+					<i class="fas fa-copyright"></i>
+					<div>
+						<span class="category">Copyright</span><br />
+						Tous droits réservés<br />
+						asso MIAGE Lille<br />
+						Hugo GIL
+					</div>
+				</div>
+
 			</div>
 		</section>
 
+		<script>
+			var rando = document.getElementById('picturesBoard');
+			fsort();
+		</script>
 
 	</body>
 </html>
