--- a/index.html
+++ b/index.html
@@ -133,28 +133,33 @@
 
 		<section class="ligne" id="contact">
 				<div class="container">
-					<div class="contactezNous">
+
+					<div id="contactezNous">
 						Contactez-nous
 					</div>
-					<div class="facebook">
-						<a href="https://facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
+
+					<div id="contactNetworks">
+						<div id="facebook" class="reseau">
+							<a href="https://facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
+						</div>
+						<div id="linkedin" class="reseau">
+							<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
+						</div>
+						<div id="mail" class="reseau">
+							<a href="mailto:assomiagelille@gmail.com" title="Asso MIAGE Lille"><i class="fa fa-envelope"></i></a>
+						</div>
+						<div id="snapchat" class="reseau">
+							<img src="images/snapcode.png" alt="Snapcode asso MIAGE" title="Snapcode asso MIAGE"/>
+							<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
+						</div>
+						<div id="twitter" class="reseau">
+							<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
+						</div>
+						<div id="discord" class="reseau">
+							<a href="https://discord.gg/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-discord"></i></a>
+						</div>
 					</div>
-					<div class="linkedin">
-						<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
-					</div>
-					<div class="mail">
-						<a href="mailto:assomiagelille@gmail.com" title="Asso MIAGE Lille"><i class="fa fa-envelope"></i></a>
-					</div>
-					<div class="snapchat">
-						<img src="images/snapcode.png" alt="Snapcode asso MIAGE" title="Snapcode asso MIAGE"/>
-						<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
-					</div>
-					<div class="twitter">
-						<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
-					</div>
-					<div class="discord">
-						<a href="https://discord.gg/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-discord"></i></a>
-					</div>
+
 				</div>
 		</section>
 
