--- a/index.html
+++ b/index.html
@@ -22,95 +22,93 @@
 
 	<body>
 
-		<div class="ligne" id="index">
-      <div class="container">
-        <img src="images/banniere3.png" title="asso MIAGE Lille" alt="asso MIAGE Lille"/>
-      </div>
-    </div>
-
 		<section class="ligne" id="construction">
 			<div class="container">
 					<h2><i class="fas fa-exclamation-triangle"></i>&nbsp;Site en construction</h2>
 			</div>
 		</section>
 
+		<div class="ligne" id="index">
+      <div class="container">
+        <img src="images/banniere4.png" title="asso MIAGE Lille" alt="asso MIAGE Lille"/>
+      </div>
+    </div>
+
 		<section class="ligne" id="intro" >
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<p>
-							L'asso MIAGE est l'association des étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille.<br />
+							L'asso MIAGE a été fondée le 15 avril 1977 par trois étudiants de la formation Méthodes Informatiques Appliquées à la Gestion des Entreprises, à l'Université de Lille.<br />
 							Elle a vocation à faciliter la communication entre les étudiants, organiser des évènements et assurer la reconnaissance professionnelle de la formation.
-							<br /><i class="fas fa-exclamation-triangle"></i>&nbsp;texte à valider
 						</p>
 					</div>
 				</div>
 			</div>
 		</section>
 
-
 		<section class="ligne" id="news">
 			<div class="container">
-					<h2>Actualités</h2>
 
+					<h2>Actu</h2>
 					<div class="newsFeed">
 
 						<div class="newsItem">
-							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
-							<div class="title">Soirée MIAGE x AEI</div>
-							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
-							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
-							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
-							<div class="fblink">Plus d'infos sur&nbsp;<a href=
-								"https://facebook.com"
-								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							<img src="images/jeuxdesoc.jpg" alt="event img" />
+							<div class="content">
+								<div class="title">Soirée jeux de société</div>
+								<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;M3 Salle Delattre</div>
+								<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;mercredi 13 mars</div>
+								<div class="message">Venez essayer de nombreux jeux de carte et de plateau que nous prête l'association Dés à la carte, et mettre une raclée à nos collègues de l'AEI ;)</div>
+								<div class="fblink">Plus d'infos sur&nbsp;<a href="https://www.facebook.com/events/2038652639587813/" title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							</div>
 						</div>
 
 						<div class="newsItem">
-							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
-							<div class="title">Soirée MIAGE x AEI</div>
-							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
-							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
-							<div class="message">Soirée de désintégration en collaboration avec l'AEI, venez entretenir votre cancer du foie!</div>
-							<div class="fblink">Plus d'infos sur&nbsp;<a href=
-								"https://facebook.com"
-								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							<img src="images/lasergame.jpg" alt="event img" />
+							<div class="content">
+								<div class="title">LaserGame INFO vs MIAGE</div>
+								<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Starship Laser République</div>
+								<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;jeudi 7 février</div>
+								<div class="message">Informaticiens, Miagistes, le combat a enfin lieu.<br />Préparez vos armes, et affrontez vous dans une épique soirée de laser game.</div>
+								<div class="fblink">Plus d'infos sur&nbsp;<a href="https://www.facebook.com/events/251084388889185/" title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							</div>
 						</div>
 
 						<div class="newsItem">
-							<div class="illus"><img src="images/event1.png"  alt="event img" /></div>
-							<div class="title">Soirée MIAGE x AEI</div>
-							<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;Huit bar</div>
-							<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;vendredi 24 mars</div>
-							<div class="message">Soirée de désintégration en collaboration avec l'AEI</div>
-							<div class="fblink"><span>Plus d'infos sur</span><a href=
-								"https://facebook.com"
-								title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							<img src="images/elections.jpg" alt="event img" />
+							<div class="content">
+								<div class="title">Élections 2019</div>
+								<div class="place"><i class="fas fa-map-marker-alt"></i>&nbsp;M3 Salle Delattre</div>
+								<div class="date"><i class="fas fa-calendar-alt"></i>&nbsp;jeudi 24 janvier</div>
+								<div class="message">Venez élire le prochain bureau de l'association !</div>
+								<div class="fblink">Plus d'infos sur&nbsp;<a href="https://www.facebook.com/events/1243602099128615" title="Évènement Facebook" target="_blank"><i class="fab fa-facebook"></i></a></div>
+							</div>
 						</div>
+
 
 					</div>
 			</div>
 		</section>
 
-
 		<section class="ligne" id="photos">
 			<div class="container">
-					<h2>Dernières photos</h2>
 					<div id="picturesBoard">
 						<figure>
-							<img src="images/campusenfete.jpg" title="Campus en fête 2018" alt="Campus en fête 2018">
-						</figure>
-						<figure class="halfsize">
-							<img src="images/JSE.jpg" title="JSE 2018" alt="JSE 2018" >
+							<img src="images/ensemble_graphique.png" title="Charte graphique" alt="Charte graphique" />
+							<figcaption>Nouvelle charte graphique</figcaption>
 						</figure>
 						<figure>
-							<img src="images/receptiondessciences2018.jpg" title="RdS 2018" alt="RdS 2018" >
+							<img src="images/campusenfete.jpg" title="Campus en fête 2018" alt="Campus en fête 2018" />
+							<figcaption>Campus en fête 2018</figcaption>
 						</figure>
-						<figure class="halfsize">
-							<img src="images/elections.jpg" title="Élections 2018" alt="Élections 2018" >
+						<figure>
+							<img src="images/JSE.jpg" title="JSE 2018" alt="JSE 2018" />
+							<figcaption>JSE 2018</figcaption>
 						</figure>
-						<figure class="halfsize">
-							<img src="images/lasergame.jpg" title="LaserGame" alt="LaserGame" >
+						<figure>
+							<img src="images/receptiondessciences2018.jpg" title="RdS 2018" alt="RdS 2018"/>
+							<figcaption>Réception des Sciences 2018</figcaption>
 						</figure>
 					</div>
 			</div>
@@ -122,14 +120,19 @@
 			</div>
 		</section>
 
-
 		<section class="ligne" id="bureau">
 			<div class="container">
+				<img src="images/trombi.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
+				<div id="bureau_desc">
 					<h2>Bureau 2019</h2>
-		      <img src="images/trombi_bg.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
+
+					<blockquote cite="https://dicocitations.lemonde.fr/">
+					    <q>Se réunir est un début&nbsp;; rester ensemble est un progrès&nbsp;; travailler ensemble est la réussite.</q>
+					</blockquote>
+					<cite>– Henry Ford</cite>
+
 			</div>
 		</section>
-
 
 		<section class="ligne" id="contact">
 				<div class="container">
@@ -139,24 +142,17 @@
 					</div>
 
 					<div id="contactNetworks">
+						<div id="mail" class="reseau">
+							<a href="mailto:assomiagelille@gmail.com" title="Contact par email"><i class="fa fa-envelope"></i></a>
+						</div>
 						<div id="facebook" class="reseau">
-							<a href="https://facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-facebook-f"></i></a>
+							<a href="https://facebook.com/AssoMIAGELille/" target="_blank" title="Asso MIAGE Lille sur Facebook"><i class="fab fa-facebook-f"></i></a>
 						</div>
 						<div id="linkedin" class="reseau">
-							<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-linkedin-in"></i></a>
-						</div>
-						<div id="mail" class="reseau">
-							<a href="mailto:assomiagelille@gmail.com" title="Asso MIAGE Lille"><i class="fa fa-envelope"></i></a>
-						</div>
-						<div id="snapchat" class="reseau">
-							<img src="images/snapcode.png" alt="Snapcode asso MIAGE" title="Snapcode asso MIAGE"/>
-							<a href="#" target="_blank" title="@AssoMIAGELille"><i class="fab fa-snapchat-ghost"></i></a>
-						</div>
-						<div id="twitter" class="reseau">
-							<a href="https://twitter.com/AssoMIAGELille" target="_blank" title="@AssoMIAGELille"><i class="fab fa-twitter"></i></a>
+							<a href="https://linkedin.com/company/asso-miage-lille" target="_blank" title="Asso MIAGE Lille sur LinkedIn"><i class="fab fa-linkedin-in"></i></a>
 						</div>
 						<div id="discord" class="reseau">
-							<a href="https://discord.gg/" target="_blank" title="Asso MIAGE Lille"><i class="fab fa-discord"></i></a>
+							<a href="https://discord.gg/" target="_blank" title="Serveur Discord des étudiants MIAGE"><i class="fab fa-discord"></i></a>
 						</div>
 					</div>
 
@@ -170,15 +166,17 @@
 					<div>
 						<span class="category">Asso MIAGE</span><br />
 						association Loi 1901<br />
-						depuis 1977<br />
+						fondée le 15 avril 1977<br />
 					</div>
 				</div>
 				<div class="col">
 					<i class="fa fa-map-marker-alt"></i>
 					<div>
 						<span class="category">Locaux</span><br />
-						Bâtiment M3 - Cité Scientifique<br />
-						59650 Villeneuve-d'Ascq<br />
+						<address>
+							Bâtiment M3 - Cité Scientifique<br />
+							59650 Villeneuve-d'Ascq<br />
+						</address>
 					</div>
 				</div>
 				<div class="col">
@@ -195,18 +193,13 @@
 					<div>
 						<span class="category">Copyright</span><br />
 						Tous droits réservés<br />
-						asso MIAGE Lille<br />
+						Asso MIAGE Lille 2019<br />
 						Hugo GIL
 					</div>
 				</div>
 
 			</div>
 		</section>
-
-		<script>
-			var rando = document.getElementById('picturesBoard');
-			fsort();
-		</script>
 
 	</body>
 </html>
