--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 	<body>
 
-		<section class="ligne" id="construction">
+		<!--<section class="ligne" id="construction">
 			<div class="container">
 					<h2><i class="fas fa-exclamation-triangle"></i>&nbsp;Site en construction</h2>
 			</div>
-		</section>
+		</section>-->
 
 		<div class="ligne" id="index">
       <div class="container">
@@ -122,9 +122,9 @@
 
 		<section class="ligne" id="bureau">
 			<div class="container">
-				<img src="images/trombi.png" alt="trombinoscope asso MIAGE Lille 2019" id="trombi"/>
+				<img src="images/trombi.jpg" alt="trombinoscope asso MIAGE Lille 2022" id="trombi"/>
 				<div id="bureau_desc">
-					<h2>Bureau 2019</h2>
+					<h2>Bureau 2022</h2>
 
 					<blockquote cite="https://dicocitations.lemonde.fr/">
 					    <q>Se réunir est un début&nbsp;; rester ensemble est un progrès&nbsp;; travailler ensemble est la réussite.</q>
@@ -193,7 +193,7 @@
 					<div>
 						<span class="category">Copyright</span><br />
 						Tous droits réservés<br />
-						Asso MIAGE Lille 2019<br />
+						Asso MIAGE Lille 2022<br />
 						Hugo GIL
 					</div>
 				</div>
