Modify picture's margin

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 		<section class="ligne" id="bureau">
 			<div class="container">
-				<img src="images/trombi.jpg" alt="trombinoscope asso MIAGE Lille 2022" id="trombi"/>
+				<img src="images/trombi.jpg" alt="trombinoscope asso MIAGE Lille 2022" id="trombi" style="margin-right: 35px;" />
 				<div id="bureau_desc">
 					<h2>Bureau 2022</h2>
 
